--- a/Sdl game/Makefile
+++ b/Sdl game/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -I src/include -L src/lib -o main main.cpp TextureManager.cpp GameObject.cpp Map.cpp -lmingw32 -lSDL2main -lSDL2 -lSDL2_image 
+	g++ -I src/include -L src/lib -o main main.cpp TextureManager.cpp GameObject.cpp Map.cpp -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -static-libgcc -static-libstdc++ -Wl,-Bstatic -lstdc++ -lpthread -Wl,-Bdynamic -mwindows
